--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,10 @@
-#root {
+#particles canvas {
+  z-index: -1;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -39,4 +45,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
